tests/transpiler/x/scala/pure_global_fold.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:51:46 GMT+7
object Main {
    def inc(x) = {
        (x + k)
    }
    def main(args: Array[String]): Unit = {
        val k = 2
        println(inc(3))
    }
}
